Stop image blocks from growing bigger than their column
If the user selects a large image then it could end up displaying larger
than the space given to the block by the user. It looks a bit gross, but
in order to have images stay within their bounds they will be squashed
to fit. In the future we can probably calculate a more appropriate
value for max-width.

--- a/src/ui/styles/image-block.css
+++ b/src/ui/styles/image-block.css
@@ -1,6 +1,7 @@
 .ImageBlock img {
   display: block;
   margin: 0 auto;
+  max-width: 100%;
 }
 
 .ImageBlock-placeholder {
